# headwater-calibration

./: .gitignore  LICENSE  README.md  SETUP.md  conftest.py  pyproject.toml
docs/: pilot_design.md
results/tables/: protocol_b_headwater.csv
scripts/: 01_pilot_synthetic.py  02_pilot_single_species.py  export_map_layer.py  extract_from_trustworthy_sdm.py  make_paper_figures.py  make_paper_figures_2_4.py  protocol_b_headwater_analysis.py  robustness_density_control.py  run_pilot_vega.sbatch
src/sdm_geometry/: __init__.py  analysis.py  calibration.py  cli.py  conformal.py  id_estimation.py  io.py  synth.py
tests/: test_id_estimation.py
